patches/frontend-gremlin-annotation.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: otel-demo
  annotations:
    gremlin.com/service-id: frontend-service
